[package]
name = "network"
version = "6.7.3"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"

[dependencies]
flume = "0.11"
tokio = { version = "1.36", features = ["rt-multi-thread", "time"] }
tokio-util = "0.7"
parking_lot = "0.12"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.5"
hex = "0.4"
thiserror = "1.0"
tentacle-multiaddr = "0.3"
clap = { version = "4.5", features = ["derive"] }
md5 = "0.7"
json5 = "0.4"
tonic = "0.11"
prost = "0.12"
tower = "0.4"
tracing = "0.1"
rand = "0.8"
zenoh = { version = "0.10.1-rc", default-features = false, features = [
    "unstable",
    "transport_quic",
    "transport_tls",
] }
zenoh-ext = "0.10.1-rc"

cloud-util = "=0.8.1"
cita_cloud_proto = "6.7.3"
