[package]
name = "network"
version = "6.7.4"
authors = ["Rivtower Technologies <contact@rivtower.com>"]
edition = "2021"

[dependencies]
flume = "0.11"
tokio = { version = "1.38", features = ["rt-multi-thread", "time"] }
tokio-util = "0.7"
parking_lot = "0.12"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
bytes = "1.6"
hex = "0.4"
thiserror = "1.0"
tentacle-multiaddr = "0.3"
clap = { version = "4.5", features = ["derive"] }
md5 = "0.7"
json5 = "0.4"
tonic = "0.12"
prost = "0.13"
tower = "0.4"
tracing = "0.1"
rand = "0.8"
zenoh = { version = "1.0.0-alpha.3", git = "https://github.com/eclipse-zenoh/zenoh", branch = "release/1.0.0-alpha.3", default-features = false, features = [
    "unstable",
    "transport_quic",
    "transport_tls",
] }
zenoh-ext = { version = "1.0.0-alpha.3", git = "https://github.com/eclipse-zenoh/zenoh", branch = "release/1.0.0-alpha.3" }

cloud-util = { package = "cloud-util", git = "https://github.com/cita-cloud/cloud-common-rs" }
cita_cloud_proto = { package = "cita_cloud_proto", git = "https://github.com/cita-cloud/cloud-common-rs" }
